Refactor Procfile and requirements.txt
- Update Procfile to use 'python' instead of 'python3'
- Add 'gunicorn' to requirements.txt for production deployment

--- a/app.json
+++ b/app.json
@@ -1,16 +1,18 @@
 {
   "name": "UPI Transaction Gateway",
-  "description": "A simple api to track UPI transactions",
+  "description": "A simple API to track UPI transactions",
   "keywords": [
     "upi",
     "transaction",
     "gateway",
     "gpay",
     "phonepe",
-    "paytm"
+    "paytm",
+    "upi payment",
+    "upi transaction"
   ],
-  "website": "",
-  "repository": "",
+  "website": "https://github.com/kevinnadar22/UPI.Payment.Gateway",
+  "repository": "https://github.com/kevinnadar22/UPI.Payment.Gateway",
   "env": {
     "DATABASE_NAME": {
       "description": "Name of the database",
