Refactor environment variables in .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mongodb://localhost:27017/your-database-name
-DATABASE_NAME=upi_transaction
+SERVER_URL=http://localhost:3000
+UPI_ID=yourupi@bank
